# cyberrunner

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  README.md  mkdocs.yml
cyberrunner_camera/: CMakeLists.txt  README.md  package.xml
cyberrunner_camera/scripts/: cam_publisher.py  video_publisher.py
cyberrunner_dreamer/: README.md  package.xml  setup.cfg  setup.py
cyberrunner_dreamer/cyberrunner_dreamer/: __init__.py  cyberrunner_layout.py  env.py  eval.py  path.py  test_motors.py  train.py  train_parallel.py
cyberrunner_dynamixel/: CMakeLists.txt  README.md  package.xml
cyberrunner_dynamixel/include/cyberrunner_dynamixel/: dynamixel_controller.h  error_handling.h
cyberrunner_dynamixel/scripts/: pantilt.py
cyberrunner_dynamixel/src/: cyberrunner_dynamixel.cpp  dynamixel_config.cpp  dynamixel_controller.cpp
cyberrunner_interfaces/: CMakeLists.txt  README.md  package.xml
cyberrunner_interfaces/msg/: DynamixelVel.msg  StateEstimate.msg  StateEstimateSub.msg
cyberrunner_interfaces/srv/: DynamixelReset.srv
cyberrunner_state_estimation/: package.xml  setup.cfg  setup.py
cyberrunner_state_estimation/calib/: calib_results_cyberrunner.txt
cyberrunner_state_estimation/cyberrunner_state_estimation/: cyberrunner_state_estimation_node.py  cyberrunner_state_estimation_subimg.py  select_markers.py
cyberrunner_state_estimation/cyberrunner_state_estimation/core/: detection.py  estimation_pipeline.py  estimator.py  gaussian_robust.py  masking.py  measurements.py  plate_pose.py
cyberrunner_state_estimation/cyberrunner_state_estimation/utils/: anim_3d.py  camera_pose_visualizer.py  divers.py  ocam_model.py  profiler_file.py
docs/: 01_hardware_setup.md  02_reload.md  03_installation.md  04_initial_config.md  05_train.md  06_troubleshooting.md  index.md
docs/assets/camera/: camera_assembly_mount.step  camera_mounting_plate.step
docs/assets/motors/: motor_mounting_bracket.step  motor_shaft_coupler.step
docs/assets/reload/: reload_4_5_mount_6.step  reload_7_8_mount_9.step  reload_brightness_cover.step  reload_corner_holder.step  reload_corridor_3.step  reload_corridor_4.step  reload_corridor_5.step  reload_corridor_7.step  reload_corridor_8.step  reload_electronics_mount.step  (+6 more)
dreamerv3/: .gitignore  example.py  requirements.txt  setup.py
dreamerv3/dreamerv3/: agent.py  behaviors.py  configs.yaml  jaxagent.py  jaxutils.py  nets.py  train.py
dreamerv3/scores/: clean.py  plot.py  view.py
(+32 files in other folders)
